--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solomon",
   "version": "0.1.0",
-  "homepage": "https://solomon.github.io/react-gh-pages",
+  "homepage": "https://Solomon141.github.io/solomon",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
